@@ -7,9 +7,6 @@ configVersion: '1.6'
 # Checks for updates from BukkitDev
 updateCheck: 'true'
 
-# Saves the RedBlock database when the world saves
-saveOnWorld: 'true'
-
 rules:
   # The maximum amount of controlled blocks per RedBlock
   maxBlocksPer: 100
